[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Abstract/Transitioner/Transitioner.gd" type="Script" id=1]

[node name="Transitioner_" type="CanvasLayer"]
layer = 100
script = ExtResource( 1 )

[node name="FadeInRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.945098, 0.960784, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeOutRect" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.945098, 0.960784, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeInTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="FadeOutTween" type="Tween" parent="."]
[connection signal="tween_all_completed" from="FadeInTween" to="." method="_on_FadeInTween_tween_all_completed"]
[connection signal="tween_all_completed" from="FadeOutTween" to="." method="_on_FadeOutTween_tween_all_completed"]
